# hurocore

./: CMakeLists.txt  README.md  package.xml
apps/: g1.cc
config/: g1_29dof_params.yaml
include/hurocore/: motor_crc_hg.h  params.h  root_node.h
launch/: g1_rviz.launch.py
msg/: MotorMode.msg
src/: motor_crc_hg.cc  root.cc  root_node.cc
